# moveo-cluster-analysis-vt1

./: .gitignore  README.md  pyproject.toml  run_clip.sh  run_cluster_labeling.py  run_pipeline.py  run_vector_combination.sh  run_workshop_data.py
outputs/: cluster_labels.csv  preprocessed_images.csv  preprocessed_llava.csv  preprocessed_llava_translated.csv  preprocessed_text.csv  preprocessed_text_all_en.csv  strategy1_clustering_results.csv  strategy1_clustering_results_s1_v2.csv  strategy1_clustering_results_s1c_translated.csv  strategy1_clustering_results_s1d_vitl14.csv  strategy1_embeddings.npy  strategy1_embeddings_index_map.csv  strategy1_embeddings_s1_v2.csv  strategy1_embeddings_s1_v2.npy  strategy1_embeddings_s1c_translated.npy  strategy1_embeddings_s1d_vitl14.npy  strategy2_clustering_results.csv  strategy2_clustering_results_0607.csv  strategy2_clustering_results_2_v4_02_08.csv  strategy2_clustering_results_s2_v2_weighted.csv  strategy2_clustering_results_s2_v3_reduce_noise.csv  strategy2_clustering_results_s2b_verify.csv  strategy2_fused_embeddings.npy  strategy2_fused_embeddings_0607.npy  strategy2_fused_embeddings_2_v4_02_08.npy  strategy2_fused_embeddings_2d.npy  strategy2_fused_embeddings_2d_0607.npy  strategy2_fused_embeddings_2d_2_v4_02_08.npy  strategy2_fused_embeddings_2d_s2_v2_weighted.npy  strategy2_fused_embeddings_2d_s2b_verify.npy  strategy2_fused_embeddings_50d.npy  strategy2_fused_embeddings_50d_0607.npy  strategy2_fused_embeddings_50d_2_v4_02_08.npy  strategy2_fused_embeddings_50d_s2_v3_reduce_noise.npy  strategy2_image_embeddings.npy  (+17 more)
(+30 files in other folders)
