[project]
name = "moveo-clustering"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "openpyxl",
    "requests",
    "Pillow",
    "nltk",
    "opencv-python>=4.13.0.92",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "open-clip-torch>=3.3.0",
    "sentence-transformers>=5.3.0",
    "umap-learn>=0.5.11",
    "matplotlib>=3.10.8",
    "ollama",
    "transformers",
    "hdbscan>=0.8.42",
    "scikit-learn>=1.8.0",
    "folium>=0.20.0",
    "staticmap>=0.5.7",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
